argo-events/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: github
  annotations:
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
          - path: /todo
            pathType: Exact
            backend:
              service:
                name: github-eventsource-svc
                port:
                  number: 12000
